tests/NormalTests/paczka1/fuzzy1/14680012.err
Error in line 2: xrX4t420f S740 28,5
Error in line 14: ceV9e A852 49,24
Error in line 8: ceV9e A852 52,5
Error in line 20: xvPT26V1 A113 27,73
Error in line 26: xrX4t420f A113 70,8
Error in line 29: ET535fbR A852 84,96
Error in line 12: ET535fbR S729 82,0
Error in line 30: ET535fbR A113 6,2
